tests/snapshots/formats__spss-sav__survey-bytecode.sav.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ survey-bytecode.sav — SPSS, 5 variables × 5 cases, bytecode-compressed, "fillyfoal survey", SPSS DATA FILE - https://github.com/WizardMac/ReadStat (07 Oct 26 11:00:00)  [0x0+0x43d]
    Record type: "$FL2"  [0x0+0x4]
    Product name: "@(#) SPSS DATA FILE - https://github.com/WizardMac/ReadStat "  [0x4+0x3c]
    Layout code: 2  [0x40+0x4]
    Nominal case size: 7  [0x44+0x4]
    Compression: bytecode (0x1)  [0x48+0x4]
    Weight variable index: 0  [0x4c+0x4]
    Number of cases: 5  [0x50+0x4]
    Compression bias: 100  [0x54+0x8]
    Creation date: "07 Oct 26"  [0x5c+0x9]
    Creation time: "11:00:00"  [0x65+0x8]
    File label: "fillyfoal survey                                                "  [0x6d+0x40]
    Padding: 00 00 00  |...|  [0xad+0x3]
  ▾ Dictionary — 18 records  [0xb0+0x2fd]
    ▾ Variable — ID  [0xb0+0x30]
        Record type: 2  [0xb0+0x4]
        Type: 0 — numeric  [0xb4+0x4]
        Has label: 1  [0xb8+0x4]
        Missing values: 0  [0xbc+0x4]
        Print format: "F8.2"  [0xc0+0x4]
        Write format: "F8.2"  [0xc4+0x4]
        Name: "ID"  [0xc8+0x8]
        Label length: 10  [0xd0+0x4]
        Label: "Respondent"  [0xd4+0xa]
    ▾ Variable — NAME  [0xe0+0x30]
        Record type: 2  [0xe0+0x4]
        Type: 22 — string, 22 bytes  [0xe4+0x4]
        Has label: 1  [0xe8+0x4]
        Missing values: 0  [0xec+0x4]
        Print format: "A22"  [0xf0+0x4]
        Write format: "A22"  [0xf4+0x4]
        Name: "NAME"  [0xf8+0x8]
        Label length: 9  [0x100+0x4]
        Label: "Full name"  [0x104+0x9]
      Variable (string continuation)  [0x110+0x20]
      Variable (string continuation)  [0x130+0x20]
    ▾ Variable — SEX  [0x150+0x38]
        Record type: 2  [0x150+0x4]
        Type: 0 — numeric  [0x154+0x4]
        Has label: 1  [0x158+0x4]
        Missing values: 0  [0x15c+0x4]
        Print format: "F8.2"  [0x160+0x4]
        Write format: "F8.2"  [0x164+0x4]
        Name: "SEX"  [0x168+0x8]
        Label length: 17  [0x170+0x4]
        Label: "Sex of respondent"  [0x174+0x11]
    ▾ Variable — SCORE  [0x188+0x38]
        Record type: 2  [0x188+0x4]
        Type: 0 — numeric  [0x18c+0x4]
        Has label: 1  [0x190+0x4]
        Missing values: 1  [0x194+0x4]
        Print format: "F8.2"  [0x198+0x4]
        Write format: "F8.2"  [0x19c+0x4]
        Name: "SCORE"  [0x1a0+0x8]
        Label length: 10  [0x1a8+0x4]
        Label: "Test score"  [0x1ac+0xa]
        Missing value: "99"  [0x1b8+0x8]
    ▾ Variable — BORN  [0x1c0+0x34]
        Record type: 2  [0x1c0+0x4]
        Type: 0 — numeric  [0x1c4+0x4]
        Has label: 1  [0x1c8+0x4]
        Missing values: 0  [0x1cc+0x4]
        Print format: "DATE11"  [0x1d0+0x4]
        Write format: "DATE11"  [0x1d4+0x4]
        Name: "BORN"  [0x1d8+0x8]
        Label length: 13  [0x1e0+0x4]
        Label: "Date of birth"  [0x1e4+0xd]
    ▾ Value labels — 2 labels  [0x1f4+0x28]
        1: "Male"  [0x1fc+0x10]
        2: "Female"  [0x20c+0x10]
      Value label variables — sex  [0x21c+0xc]
    ▾ Value labels — 1 labels  [0x228+0x18]
        99: "Refused"  [0x230+0x10]
      Value label variables — score  [0x240+0xc]
      Document — 1 lines  [0x24c+0x58]
    ▾ Machine integer info — subtype 3, 8 × 4 bytes  [0x2a4+0x30]
        Version major: 20  [0x2b4+0x4]
        Version minor: 0  [0x2b8+0x4]
        Version revision: 0  [0x2bc+0x4]
        Machine code: -1  [0x2c0+0x4]
        Floating-point representation: IEEE 754 (0x1)  [0x2c4+0x4]
        Compression code: 1  [0x2c8+0x4]
        Endianness: little-endian (0x2)  [0x2cc+0x4]
        Character code: 65001 — utf-8  [0x2d0+0x4]
    ▾ Machine floating-point info — subtype 4, 3 × 8 bytes  [0x2d4+0x28]
        System-missing value: -179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 — -1.7976931348623157e308  [0x2e4+0x8]
        Highest value: 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 — 1.7976931348623157e308  [0x2ec+0x8]
        Lowest value: -179769313486231550000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 — -1.7976931348623155e308  [0x2f4+0x8]
    ▾ Variable display parameters — subtype 11, 15 × 4 bytes  [0x2fc+0x4c]
        id — unknown, width 8, right
        name — unknown, width 8, left
        sex — unknown, width 8, right
        score — unknown, width 8, right
        born — unknown, width 8, right
    ▾ Long variable names — subtype 13, 45 × 1 bytes  [0x348+0x3d]
        Entry: "ID=id"  [0x358+0x5]
        Entry: "NAME=name"  [0x35e+0x9]
        Entry: "SEX=sex"  [0x368+0x7]
        Entry: "SCORE=score"  [0x370+0xb]
        Entry: "BORN=born"  [0x37c+0x9]
    ▾ Extended number of cases — subtype 16, 2 × 8 bytes  [0x385+0x20]
        Unknown (1): 1  [0x395+0x8]
        Number of cases: 5  [0x39d+0x8]
      End of dictionary  [0x3a5+0x8]
  ▾ Variables — 5 variables
    ▾ id — numeric, F8.2, "Respondent"  [0xb0+0x30]
        Name: "id"
        Short name: "ID"  [0xc8+0x8]
        Label: "Respondent"
        Type: "numeric"
        Print format: "F8.2"  [0xc0+0x4]
        Write format: "F8.2"  [0xc4+0x4]
        Case slots: "1 (from 0)"
        Measure: unknown (0x0)
        Display width: 8
        Alignment: right (0x1)
    ▾ name — string(22), A22, "Full name"  [0xe0+0x30]
        Name: "name"
        Short name: "NAME"  [0xf8+0x8]
        Label: "Full name"
        Type: "string(22)"
        Print format: "A22"  [0xf0+0x4]
        Write format: "A22"  [0xf4+0x4]
        Case slots: "3 (from 1)"
        Measure: unknown (0x0)
        Display width: 8
        Alignment: left (0x0)
    ▾ sex — numeric, F8.2, "Sex of respondent"  [0x150+0x38]
        Name: "sex"
        Short name: "SEX"  [0x168+0x8]
        Label: "Sex of respondent"
        Type: "numeric"
        Print format: "F8.2"  [0x160+0x4]
        Write format: "F8.2"  [0x164+0x4]
        Case slots: "1 (from 4)"
        Measure: unknown (0x0)
        Display width: 8
        Alignment: right (0x1)
        Value labels — 1 = "Male", 2 = "Female"  [0x1f4+0x28]
    ▾ score — numeric, F8.2, "Test score"  [0x188+0x38]
        Name: "score"
        Short name: "SCORE"  [0x1a0+0x8]
        Label: "Test score"
        Type: "numeric"
        Print format: "F8.2"  [0x198+0x4]
        Write format: "F8.2"  [0x19c+0x4]
        Case slots: "1 (from 5)"
        Missing values: "99"
        Measure: unknown (0x0)
        Display width: 8
        Alignment: right (0x1)
        Value labels — 99 = "Refused"  [0x228+0x18]
    ▾ born — numeric, DATE11, "Date of birth"  [0x1c0+0x34]
        Name: "born"
        Short name: "BORN"  [0x1d8+0x8]
        Label: "Date of birth"
        Type: "numeric"
        Print format: "DATE11"  [0x1d0+0x4]
        Write format: "DATE11"  [0x1d4+0x4]
        Case slots: "1 (from 6)"
        Measure: unknown (0x0)
        Display width: 8
        Alignment: right (0x1)
  ▾ Value labels — 2 sets
    ▾ Set 1 (sex) — 1 = "Male", 2 = "Female"  [0x1f4+0x28]
        1: "Male"  [0x1fc+0x10]
        2: "Female"  [0x20c+0x10]
    ▾ Set 2 (score) — 99 = "Refused"  [0x228+0x18]
        99: "Refused"  [0x230+0x10]
  ▾ Documents — 1 lines
      Line 1: "Generated for fillyfoal's test suite"
  ▾ Cases — 5 cases × 7 slots  [0x3ad+0x90]
    ▾ Case 1 — id=1, name="Alice", sex=1 (Male), score=12.5, born=1980-01-15  [#1:0x0+0x38]
        id: 1  [#1:0x0+0x8]
        name: "Alice"  [#1:0x8+0x16]
        sex: 1 — Male  [#1:0x20+0x8]
        score: 12.5  [#1:0x28+0x8]
        born: 1980-01-15 00:00:00 UTC — 1980-01-15  [#1:0x30+0x8]
    ▾ Case 2 — id=2, name="Bob", sex=2 (Female), score=user-missing (Refused), born=1999-12-31  [#1:0x38+0x38]
        id: 2  [#1:0x38+0x8]
        name: "Bob"  [#1:0x40+0x16]
        sex: 2 — Female  [#1:0x58+0x8]
        score: 99 — missing (user-missing), Refused  [#1:0x60+0x8]
        born: 1999-12-31 00:00:00 UTC — 1999-12-31  [#1:0x68+0x8]
    ▾ Case 3 — id=3, name="Čedomir", sex=2 (Female), score=sysmis, born=sysmis  [#1:0x70+0x38]
        id: 3  [#1:0x70+0x8]
        name: "Čedomir"  [#1:0x78+0x16]
        sex: 2 — Female  [#1:0x90+0x8]
        score: "sysmis" — missing  [#1:0x98+0x8]
        born: "sysmis" — missing  [#1:0xa0+0x8]
    ▾ Case 4 — id=4, name="", sex=1 (Male), score=7.25, born=1960-01-01  [#1:0xa8+0x38]
        id: 4  [#1:0xa8+0x8]
        name: ""  [#1:0xb0+0x16]
        sex: 1 — Male  [#1:0xc8+0x8]
        score: 7.25  [#1:0xd0+0x8]
        born: 1960-01-01 00:00:00 UTC — 1960-01-01  [#1:0xd8+0x8]
    ▾ Case 5 — id=5, name="Eve with a longer name", sex=sysmis, score=10000000000, born=2024-02-29  [#1:0xe0+0x38]
        id: 5  [#1:0xe0+0x8]
        name: "Eve with a longer name"  [#1:0xe8+0x16]
        sex: "sysmis" — missing  [#1:0x100+0x8]
        score: 10000000000  [#1:0x108+0x8]
        born: 2024-02-29 00:00:00 UTC — 2024-02-29  [#1:0x110+0x8]
